--- a/_posts/2018-10-22-neat-urls.md
+++ b/_posts/2018-10-22-neat-urls.md
@@ -4,14 +4,12 @@ title: Removing Facebook Tracking Params
 date: 2018-10-22
 ---
 
-Facebook recently began adding a `fbclid` parameter to external links. Using the Firefox add-on [Neat URL](https://addons.mozilla.org/firefox/addon/neat-url/), you can easily remove these and other similar tracking parameters.
+Facebook recently began adding a `fbclid` parameter to external links. Using the [Neat URL Firefox Add-on](https://addons.mozilla.org/firefox/addon/neat-url/) and the [Neat URL Chrome extension](https://chrome.google.com/webstore/detail/neat-url/jchobbjgibcahbheicfocecmhocglkco), you can easily remove these and other similar tracking parameters.
 
-  1. Install [Neat URL](https://addons.mozilla.org/firefox/addon/neat-url/).
-  2. Go to the add-on preferences by right-clicking on the `?_` icon and selecting _Preferences_.
+  1. Install the [Neat URL Firefox add-on](https://addons.mozilla.org/firefox/addon/neat-url/) or the [Neat URL Chrome extension](https://chrome.google.com/webstore/detail/neat-url/jchobbjgibcahbheicfocecmhocglkco), depending on which browser you are using. I have only tried the Firefox add-on as I am not a regular Chrome user.
+  2. Go to the add-on preferences by right-clicking on the __?___ icon selecting _Preferences_. This will bring up the Firefox Add-ons Manager with the Neat URL preferences page open.
   3. Scroll down a bit to the _Blocked parameters_ box. It should already be prepopulated with a lot of parameters. At the time of this writing, `fbclid` is not in there by default, but I won't be surprised when the author adds it.
   4. If it's not in there already, add `fbclid` to the list. I added it in the middle with the other `fb_*` parameters.
   5. Make sure you hit the _Save preferences_ button at the bottom of the page.
 
-Once you've completed the above steps, you can test by going to [`https://ianc.blog/?fbclid=foo`](https://ianc.blog/?fbclid=foo). The extension modifies the request before it is sent to the server, so you should see the address bar show `https://ianc.blog/` right away.
-
-You're all set!
+Once you've completed the above steps, you can test by going to [`https://ianc.blog/?fbclid=foo`](https://ianc.blog/?fbclid=foo). The extension modifies the request before it is sent to the server, so you should see the address bar show `https://ianc.blog/` right away. You're all set!
