update url in post

--- a/_posts/2018-10-22-neat-urls.md
+++ b/_posts/2018-10-22-neat-urls.md
@@ -12,4 +12,4 @@ Facebook recently began adding a `fbclid` parameter to external links. Using the
   4. If it's not in there already, add `fbclid` to the list. I added it in the middle with the other `fb_*` parameters.
   5. Make sure you hit the _Save preferences_ button at the bottom of the page.
 
-Once you've completed the above steps, you can test by going to [`https://ianc.blog/?fbclid=foo`](https://ianc.blog/?fbclid=foo). The extension modifies the request before it is sent to the server, so you should see the address bar show `https://ianc.blog/` right away. You're all set!
+Once you've completed the above steps, you can test by going to [`https://ianc.blog?fbclid=foo`](https://ianc.blog?fbclid=foo). The extension modifies the request before it is sent to the server, so you should see the address bar show `https://ianc.blog` right away. You're all set!
